# kraster

./: .clang-format  .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md
kraster/: CMakeLists.txt  camera.h  keyboard.c  keyboard.h  kraster.c  kraster.h  light.c  light.h  main.c  math.c  math.h  mesh.c  mesh.h  platform.c  platform.h  render.c  render.h  texture.c  texture.h  triangle.c  triangle.h
kraster/math/: matrix.c  matrix.h  util.h  vector.c  vector.h
kraster/utility/: io.c  io.h  logger.c  logger.h  timer.c  timer.h
scripts/: run-debug.bat  run-release.bat
